[package]
name = "multiboot"
version = "0.5.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>", "Dan Schatzberg <schatzberg.dan@gmail.com>", "Adrian Danis <Adrian.Danis@nicta.com.au>", "Stephane Duverger <stephane.duverger@gmail.com>"]

description = "Library to access multiboot structures."
homepage = "https://github.com/gz/rust-multiboot"
repository = "https://github.com/gz/rust-multiboot"
documentation = "http://gz.github.io/rust-multiboot/multiboot/"

readme = "README.md"
keywords = ["multiboot", "kernel", "os", "bootloader", "x86"]
license = "MIT"

[dependencies]
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.0', optional = true }

[features]
default = []
rustc-dep-of-std = ['core', 'compiler_builtins/rustc-dep-of-std']

[[test]]
name = "mbtest"
harness = false
